# nametag-a2h

./: .gitignore  README.md  install.sh  pyproject.toml
openclaw-plugin/: index.ts  openclaw.plugin.json  package-lock.json  package.json
src/nametag_a2h/: __init__.py  __main__.py  a2h.py  authorize.py  cli.py  config.py  nametag_client.py  principal_store.py  server.py
tests/: test_a2h.py  test_authorize.py  test_cli.py  test_config.py  test_nametag_client.py  test_principal_store.py  test_server.py
